# trusty

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  test_api.sh
frontend/: package-lock.json  package.json
frontend/src/: App.svelte  app.css  main.ts
frontend/src/lib/: api.ts  crypto.ts  session.ts  theme.ts
frontend/src/lib/components/: FilePreview.svelte  FileTable.svelte  FileTable.svelte.backup  FileUploadModal.svelte  LoginForm.svelte  SystemStats.svelte
migrations/: 20260217000000_initial_schema.sql
src/: auth.rs  filemanager.rs  main.rs  static_files.rs  stats.rs  user.rs
