[package]
name = "trusty"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
axum_typed_multipart = "0.16"
base64 = "0.22.1"
chrono = "0.4.43"
dotenvy = "0.15"
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "pkcs8"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
mime_guess = "2.0.5"
pkcs8 = { version = "0.10", features = ["std"] }
rust-embed = "8.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
sysinfo = "0.33"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["cors"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
